# yew-wasm-pack-tailwind

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  index.html  main.js  package.json  rollup.config.js  tailwind.config.js
src/: app.rs
